--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <footer>
   <div class="container">
-    <p>footer text</p>
+    <p class="center">Connect tomorrow, today</p>
   </div>
 </footer>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
