--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,10 @@
   <head>
     <title>Fazzy Book</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
