--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
   <div class="container">
-    <h1>Welcome to Fazbook-auth</h1>
+    <h1 class="center">Welcome to Fazbook-auth</h1>
   </div>
 </header>
